--- a/settings.gradle
+++ b/settings.gradle
@@ -1,10 +1,10 @@
 rootProject.name = "Antigone"
 
 include("core")
+include("generator")
 
 include(":nms")
 include(":nms:shared")
 include(":nms:v1_20_2")
 include(":nms:v1_20_3")
 include(":nms:v1_20_4")
-
