--- a/core/build.gradle
+++ b/core/build.gradle
@@ -9,12 +9,14 @@ dependencies {
     shadow(project(path: ":nms:v1_20_3", configuration: "reobf"))
     shadow(project(path: ":nms:v1_20_4", configuration: "reobf"))
 
+    shadow("org.bstats:bstats-bukkit:3.0.2")
     shadow("io.github.classgraph:classgraph:4.8.165")
 }
 
 shadowJar {
     configurations = [project.configurations.shadow]
 
+    relocate("org.bstats", "eu.jasperlorelai.antigone.shaded.bstats")
     relocate("io.github.classgraph", "eu.jasperlorelai.antigone.shaded.io.github.classgraph")
     relocate("nonapi.io.github.classgraph", "eu.jasperlorelai.antigone.shaded.nonapi.io.github.classgraph")
 
