--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,4 +31,5 @@ jobs:
         uses: mikepenz/action-junit-report@v4
         if: success() || failure()
         with:
-          report_paths: "generator/build/test-results/test/TEST-*.xml"
+          require_tests: true
+          report_paths: "nms/**/build/test-results/test/TEST-*.xml"
