--- a/nms/build.gradle
+++ b/nms/build.gradle
@@ -1,9 +1,9 @@
 subprojects {
 
     dependencies {
-        implementation("com.squareup:javapoet:1.13.0")
-        implementation("org.junit.jupiter:junit-jupiter:5.9.2")
-        implementation("io.github.classgraph:classgraph:4.8.165")
+        implementation("com.palantir.javapoet:javapoet:0.5.0")
+        implementation("org.junit.jupiter:junit-jupiter:5.11.3")
+        implementation("io.github.classgraph:classgraph:4.8.179")
 
         testRuntimeOnly("org.junit.platform:junit-platform-launcher")
     }
