--- a/core/build.gradle
+++ b/core/build.gradle
@@ -5,6 +5,7 @@ plugins {
 dependencies {
     implementation("io.papermc.paper:paper-api:1.20.6-R0.1-SNAPSHOT")
 
+    shadow(project(path: ":spells")) {transitive = false}
     shadow(project(path: ":nms:shared")) {transitive = false}
     shadow(project(path: ":nms:v1_20_6")) {transitive = false}
     shadow(project(path: ":nms:v1_21")) {transitive = false}
